--- a/leo-satellite-observer-t.html
+++ b/leo-satellite-observer-t.html
@@ -255,7 +255,7 @@
                   const lng = parseFloat(match[6]);
                   const key = `${lat},${lng}`;
                   if (!callsigns[key]) callsigns[key] = [];
-                  callsigns[key].push({ callsign, dxgridlocator, markerIcon: "img/m_m30.png" });
+                  callsigns[key].push({ callsign, dxgridlocator, markerIcon: "img/176096794465035723.png" });
                 }
 
                 for (const key in callsigns) {
