--- a/leo-satellite-observer-t.html
+++ b/leo-satellite-observer-t.html
@@ -160,8 +160,10 @@
       <button onclick="initMap(document.getElementById('grid-locator').value)">Plot your Range</button>
 
       <div class="observer-buttons">
-        <button onclick="window.open('https://dxer.site/greencube-observer.html', '_blank')">MEO Observer</button>
-        <button onclick="window.open('https://dxer.site/qo-100-satellite-observer.html', '_blank')">GEO Observer</button>
+        <button onclick="window.open('https://dxer.site', '_blank')">🏠</button>
+        <button onclick="window.open('https://dxer.site/greencube-observer.html', '_blank')">MEO</button>
+        <button onclick="window.open('https://dxer.site/qo-100-satellite-observer.html', '_blank')">GEO</button>
+        <button onclick="window.open('https://dxer.site/eme-observer/', '_blank')">EME</button>
       </div>
     </div>
 
