--- a/qo-100-satellite-observer-t.html
+++ b/qo-100-satellite-observer-t.html
@@ -245,7 +245,7 @@
         const defaultCircle = {
           center: { lat: 0.0, lng: 25.8110 },
           radius: 9050000,
-          strokeColor: "#0000FF",  // optional: choose a color
+          strokeColor: "#D95F45",  // optional: choose a color
           fillOpacity: 0.05,
           angle: 0 // angle for optional label placement
         };
@@ -255,7 +255,7 @@
             radius: defaultCircle.radius,
             color: defaultCircle.strokeColor,
             fillOpacity: defaultCircle.fillOpacity,
-            weight: 1,
+            weight: 2,
             wrapElements: true,
             clipLat: 85,
             degStep: 0.5,
