--- a/leo-satellite-observer-t.html
+++ b/leo-satellite-observer-t.html
@@ -160,7 +160,11 @@
       <button onclick="initMap(document.getElementById('grid-locator').value)">Plot your Range</button>
 
       <div class="observer-buttons">
-        <button onclick="window.open('https://dxer.site', '_blank')">🏠</button>
+          <button onclick="window.open('https://dxer.site', '_blank')" style="padding:6px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
+            </svg>
+          </button>
         <button onclick="window.open('https://dxer.site/greencube-observer.html', '_blank')">MEO</button>
         <button onclick="window.open('https://dxer.site/qo-100-satellite-observer.html', '_blank')">GEO</button>
         <button onclick="window.open('https://dxer.site/eme-observer/', '_blank')">EME</button>
