--- a/greencube-observer-t.html
+++ b/greencube-observer-t.html
@@ -257,6 +257,7 @@
         <a href="https://dxer.site/greencube-leaderboard.html" target="_blank">&nbsp;ALL</a>
       </h2>
       <ol id="leaderboard-list">
+        <li>Loading...</li>
       </ol>
       <button class="hide-button" onclick="toggleLeaderboard()">Hide</button>
     </div>
@@ -475,6 +476,6 @@
 
       initMap('');
     </script>
-    <script src="leaderboard.js"></script>
+    <script src="leaderboard-l.js"></script>
   </body>
 </html>
