--- a/greencube-observer-t.html
+++ b/greencube-observer-t.html
@@ -209,6 +209,29 @@
         }
 
       * { outline: none !important; }
+      .notice-banner {
+        position: absolute;
+        bottom: 20px;
+        right: 50px;
+        z-index: 1000;
+        background-color: #fff8e1;
+        color: #333;
+        border-left: 5px solid #ffcc00;
+        box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
+        padding: 10px 12px;
+        border-radius: 8px;
+        font-size: 13px;
+        display: flex;
+        align-items: flex-start;
+        gap: 8px;
+        max-width: 260px;
+      }
+
+      .notice-banner .warning-icon {
+        flex-shrink: 0;
+        color: #ff9800;
+      }
+
     </style>
   </head>
 
@@ -450,7 +473,7 @@
               L.greatCircle([coords.lat, coords.lng], {
                   radius: circle.radius,
                   color: circle.strokeColor || "#FF0000",
-                  fillOpacity: circle.fillOpacity !== undefined ? circle.fillOpacity : 0.05,
+                  fillOpacity: circle.fillOpacity !== undefined ? circle.fillOpacity : 0.1,
                   weight: 1,
                   wrapElements: true,
                   clipLat: 85,
@@ -477,5 +500,16 @@
       initMap('');
     </script>
     <script src="leaderboard-l.js"></script>
+    <!-- Historical Notice -->
+    <div class="notice-banner">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" class="warning-icon">
+        <path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/>
+      </svg>
+      <div>
+        <strong>Note:</strong> IO-117 (GreenCube) ceased operations on <b>2024-08-25</b> following radiation damage sustained in the Van Allen belts.<br>
+        Data shown here represents <b>historical activity</b>.
+      </div>
+    </div>
+
   </body>
 </html>
