--- a/greencube-observer-t.html
+++ b/greencube-observer-t.html
@@ -212,7 +212,7 @@
       .notice-banner {
         position: absolute;
         bottom: 20px;
-        right: 20px;
+        right: 50px;
         z-index: 1000;
         background-color: #fff8e1;
         color: #333;
@@ -544,7 +544,7 @@
         <path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/>
       </svg>
       <div class="notice-text">
-        <strong>Note:</strong> IO-117 (GreenCube) ceased operations on 2024-08-25 following radiation damage sustained in the Van Allen belts. Data shown here represents <b>historical activity</b>.
+        <strong>IO-117 (GreenCube) ceased operations on 2024-08-25 due to radiation damage sustained in the Van Allen belts. Data shown here represents <b>historical activity</b>.
       </div>
       <button class="notice-close" onclick="hideNotice()">✕</button>
     </div>
