--- a/greencube-observer-t.html
+++ b/greencube-observer-t.html
@@ -261,6 +261,10 @@
       .notice-close:hover {
         color: #000;
       }
+        @media (max-width: 600px) {
+          .floating { left: 10px; top: 10px; width: calc(100% - 20px); }
+          .leaderboard-widget { left: 10px; bottom: 10px; width: calc(100% - 20px); }
+        }
 
 
     </style>
